dck_container/containerbank-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerbank-svc
  namespace: packapp05
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 85
    targetPort: 8080
    protocol: TCP
  selector:
    app: containerbank
